Updated model + Webapp

--- a/truck-center-webapp/src/main/resources/templates/home.html
+++ b/truck-center-webapp/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
@@ -7,5 +7,26 @@
 <body>
 
 Home page
+
+<form action="login-as-admin" method="POST">
+    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+    <input type="submit" value="login as admin"/>
+</form>
+
+<form action="login-as-teacher" method="POST">
+    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+    <input type="submit" value="login as teacher"/>
+</form>
+
+<form action="login-as-student" method="POST">
+    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+    <input type="submit" value="login as student"/>
+</form>
+
+<form action="${logoutURL}" method="POST">
+    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+    <input type="submit" value="Déconnexion"/>
+</form>
+
 </body>
 </html>
