--- a/truck-center-webapp/src/main/resources/templates/driver/newDriver.html
+++ b/truck-center-webapp/src/main/resources/templates/driver/newDriver.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
+
+Errors :
+<ul>
+    <li th:each="err : ${#fields.errors('*')}" th:text="${err}" />
+</ul>
+
+<form action="#" th:action="@{/drivers/add}" th:object="${addDriverForm}" method="post">
+    <input type="text" th:field="*{firstName}" />
+    <input type="text" th:field="*{lastName}" />
+    <input type="text" th:field="*{email}" />
+    <input type="text" th:field="*{password}" />
+
+    <input type="submit" value="Add"/>
+</form>
 
 </body>
 </html>
