--- a/truck-center-webapp/src/main/resources/templates/home.html
+++ b/truck-center-webapp/src/main/resources/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> </meta>
     <title></title>
 </head>
 <body>
