--- a/truck-center-webapp/src/main/resources/templates/message/allMessages.html
+++ b/truck-center-webapp/src/main/resources/templates/message/allMessages.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> </meta>
     <title></title>
 </head>
 <body>
+
+Alerts
+
+<table>
+    <tr data-th-each="alert : ${alerts}">
+        <td data-th-text="${alert.date}">...</td>
+        <td data-th-text="${alert.date}">...</td>
+    </tr>
+</table>
 
 </body>
 </html>
